<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.UnsoldDetailsActivity"
    tools:showIn="@layout/activity_unsold_details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_constraint"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:focusableInTouchMode="true"
        android:background="@color/colorlogin_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <EditText
            android:id="@+id/search_unsold_model"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_boarder"
            android:ems="10"
            android:hint="@string/model_hint"
            android:inputType="textPersonName"
            android:nextFocusUp="@id/search_model"
            android:nextFocusLeft="@id/search_model"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorlogin_background"
        app:layout_constraintTop_toBottomOf="@+id/first_constraint">

        <TextView
            android:id="@+id/model_header2"
            android:layout_width="200dp"
            android:text="@string/modelName"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorSplash"
            android:textSize="16sp"
            android:padding="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/colorSplash"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/model_header2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/unsold_product_detailss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_constraint" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/unsold_nav_view_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/splash_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>